Finished the assignment
